; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-hcd.c_ohci_usb_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-hcd.c_ohci_usb_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ohci_hcd = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@OHCI_CTRL_RWC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ohci_hcd*)* @ohci_usb_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ohci_usb_reset(%struct.ohci_hcd* %0) #0 {
  %2 = alloca %struct.ohci_hcd*, align 8
  store %struct.ohci_hcd* %0, %struct.ohci_hcd** %2, align 8
  %3 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %4 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %5 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = call i32 @ohci_readl(%struct.ohci_hcd* %3, i32* %7)
  %9 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %10 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 8
  %11 = load i32, i32* @OHCI_CTRL_RWC, align 4
  %12 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %13 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = and i32 %14, %11
  store i32 %15, i32* %13, align 8
  %16 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %17 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %18 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.ohci_hcd*, %struct.ohci_hcd** %2, align 8
  %21 = getelementptr inbounds %struct.ohci_hcd, %struct.ohci_hcd* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = call i32 @ohci_writel(%struct.ohci_hcd* %16, i32 %19, i32* %23)
  ret void
}

declare dso_local i32 @ohci_readl(%struct.ohci_hcd*, i32*) #1

declare dso_local i32 @ohci_writel(%struct.ohci_hcd*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
